--- a/study2/analysis/2_emotion.qmd
+++ b/study2/analysis/2_emotion.qmd
@@ -439,7 +439,7 @@ m_arousal <- glmmTMB::glmmTMB(Arousal ~ Gender/ Condition +
 
 results_table(m_arousal)
 
-marginaleffects::avg_slopes(m_arousal, variables=c("Condition", "StimuliType"), by="Gender") |>
+marginaleffects::avg_slopes(m_arousal, variables="Condition", by="Gender") |>
   results_table()
 ```
 
@@ -469,12 +469,10 @@ Lastly, the interaction between sexual activity and condition on Arousal levels.
 
 <!-- All significant findings for feedback  -->
 
-```{=html}
 <!-- 1.For Males, giving feedback indicating that AI-generated images were less attractive, influenced arousal ratings for images labeled as AI-generated. Specifically, males who reported finding AI-generated images as less arousing had lower arousal ratings for those images. 
 
 
 <!-- 2. For Males, giving feedback indicating that AI-generated images were more attractive significantly influenced arousal ratings for images labeled as AI-generated. Specifically, males who reported finding AI-generated images more attractive had higher arousal ratings for these images.  -->
-```
 
 <!-- Note: The feedback that the difference between the conditions was subtle only had one value - i.e., False.  The feedback that some AI images were arousing and that no AI images were arousing also only had one value - i.e., False -->
 
@@ -501,6 +499,7 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI", "BAIT_Positive", "BAIT_N
 }
 
 display(moderator_results)
+
 ```
 
 ```{r Arousal Moderator Feedback}
@@ -602,7 +601,7 @@ Women rated images as less enticing than men overall. They rated couple images a
 Looking at the average slopes, both genders rate Ai-generated conditions lower in enticement, although this effect is only significant for men.
 
 ```{r Enticement Model}
-m_enticement <- glmmTMB::glmmTMB(Enticing ~ Gender / StimuliType/ Condition + 
+m_enticement <- glmmTMB::glmmTMB(Enticing ~ Gender / Condition + 
                                    (Condition | Participant) + (1|Stimulus),
                       data=df, family=glmmTMB::ordbeta(),
                       control = glmmTMB::glmmTMBControl(parallel = 8))
@@ -626,7 +625,7 @@ m_enticement_st <- glmmTMB::glmmTMB(Enticing ~ Gender / StimuliType/ Condition +
 
 results_table(m_enticement_st)
 
-marginaleffects::avg_slopes(m_enticement_st, variables="Condition", by="Gender") |>
+marginaleffects::avg_slopes(m_enticement_st, variables=c("Condition", "StimuliType"), by="Gender") |>
   results_table()
 
 ```
@@ -768,10 +767,11 @@ m_valence_st <- glmmTMB::glmmTMB(Valence ~ Gender / StimuliType/ Condition +
 
 results_table(m_valence_st)
 
-marginaleffects::avg_slopes(m_valence_st, variables="Condition", by="Gender") |>
+marginaleffects::avg_slopes(m_valence_st, variables=c("Condition", "StimuliType"), by="Gender") |>
   results_table()
 
 ```
+  
 
 ### Moderators
 
@@ -903,7 +903,7 @@ m_emotionality_st <- glmmTMB::glmmTMB(Emotionality ~ Gender /StimuliType/ Condit
 
 results_table(m_emotionality_st)
 
-marginaleffects::avg_slopes(m_emotionality_st, variables="Condition", by="Gender", re.form=NA) |>
+marginaleffects::avg_slopes(m_emotionality_st, variables=c("Condition", "StimuliType"), by="Gender", re.form=NA) |>
   results_table()
 ```
 
@@ -980,18 +980,21 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
 
 ## Summary
 
--   Gender is a major predictor of arousal, enticement and valence, with females generally reporting lower ratings than males overall.
--   Women prefer couple images (i.e.,significantly higher arousal, enticement and valence ratings); men prefer individual images (i.e.,significantly lower arousal, enticement and valence ratings).
--   AI-generation reduces arousal for men, especially for individual images. AI-generation has no significant effect on arousal for women, whether images are of individuals or couples.
+-   Gender is a major predictor of arousal, enticement and valence, with females generally reporting lower ratings than males overall but not significantly.
+- Men significantly rate AI images as less arousing, enticing and valent than images presented as real photos.
+- Women rate images presented as AI-generated lower in valence than images presented as real photos. 
+
+-  Women prefer couple images (i.e.,significantly higher arousal, enticement and valence ratings); men prefer individual images (i.e.,significantly lower arousal, enticement and valence ratings).
+- AI-generation reduces arousal for men, especially for individual images. AI-generation has no significant effect on arousal for women, whether images are of individuals or couples.
 
 **Moderators**
 
--   For women, positive attitudes towards AI moderated arousal and enticement, resulting in more favorable evaluations of AI-generated images. Negative attitudes moderated valence ratings, leading to less favorable evaluations.
--   Negative attitudes towards AI moderated valence ratings for both genders
--   Reporting having higher knowledge about AI moderated valence ratings for men
--   Sexual activity moderated enticement ratings for females. Specifically, females who reported having sexual activity within the 3 previous days tended to rate AI images higher in enticement.
--   Men’s perceptions of the attractiveness of AI-generated images moderated both arousal and valence ratings. More attractive AI images were rated as more arousing and valent.
--   Female's feedback that no images were attractive moderated arousal ratings.
+<!-- -   For women, positive attitudes towards AI moderated arousal and enticement, resulting in more favorable evaluations of AI-generated images. Negative attitudes moderated valence ratings, leading to less favorable evaluations. -->
+<!-- -   Negative attitudes towards AI moderated arousal, valence ratings for both genders -->
+<!-- -   Reporting having higher knowledge about AI moderated arousal, valence ratings for men -->
+<!-- <!-- -   Sexual activity moderated enticement ratings for females. Specifically, females who reported having sexual activity within the 3 previous days tended to rate AI images higher in enticement. --> -->
+<!-- -   Men’s perceptions of the attractiveness of AI-generated images moderated both arousal and valence ratings. More attractive AI images were rated as more arousing and valent, less attractive. -->
+<!-- -   Female's feedback that no images were attractive moderated arousal ratings. -->
 
 ## Figures
 
@@ -1016,31 +1019,31 @@ pred1 <- rbind(
 )
 
 # stars1a <- data.frame(label=c("**","***", "**", "***", "***", "***"),
-#                     Gender=fct_relevel(c("Male", "Female", "Male", "Female", "Male", "Female"), "Male"),
+#                    Gender=fct_relevel(c("Male", "Female", "Male", "Female", "Male", "Female"), "Male"),
 #                     Outcome=c("Arousal","Arousal", "Enticement", "Enticement", "Valence", "Valence"),
-#                     Condition=c("Photograph", "Photograph", "Photograph", "Photograph", "Photograph", "Photograph"), 
-#                     x=c(1.5, 1.5, 1.5, 1.5, 1.5, 1.5), 
+#                     Condition=c("Photograph", "Photograph", "Photograph", "Photograph", "Photograph", "Photograph"),
+#                     x=c(1.5, 1.5, 1.5, 1.5, 1.5, 1.5),
 #                     y = c(0.53, 0.40, 0.6, 0.51, 0.62, 0.58))
 
-stars1b <- data.frame(label=c("*","**", "*","*"),
-                    Gender=fct_relevel(c("Male", "Male", "Male","Male"), "Male"),
-                    Outcome=c("Arousal", "Enticement", "Enticement","Valence"),
-                    x=c(1, 1, 2, 1),
-                    y=c(0.60, 0.65, 0.56, 0.68))
+# stars1b <- data.frame(label=c("*","**", "*","*"),
+#                     Gender=fct_relevel(c("Male", "Male", "Male","Male"), "Male"),
+#                     Outcome=c("Arousal", "Enticement", "Enticement","Valence"),
+#                     x=c(1, 1, 2, 1),
+#                     y=c(0.60, 0.65, 0.56, 0.68))
 
 
 p1 <- pred1 |>
   mutate(Gender = fct_relevel(Gender, "Male", "Female")) |> 
-  ggplot(aes(x=StimuliType, y=Proportion)) +
+  ggplot(aes(x=Outcome, y=Proportion)) +
   geom_hline(yintercept=0, color="darkgrey") +
   geom_line(aes(group=Condition, color=Condition), position = position_dodge(width=0.2), alpha=0.8, linewidth=0.4, key_glyph = "path") +
   geom_pointrange(aes(ymin = CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2), size=0.3) +
-  geom_text(data=stars1b, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=6) +
-  geom_rect(data=data.frame(StimuliType = "Individual", Proportion=0.1, Gender=as.factor("Male"), Outcome="Arousal"),
-            aes(xmin=0.8, xmax=1.2, ymin=0.35, ymax=0.7), color="#8BC34A", alpha=0, ) +
-  geom_rect(data=data.frame(StimuliType = "Individual",Proportion=0.1, Gender=as.factor("Female"), Outcome="Arousal"),
-            aes(xmin=0.8, xmax=1.2, ymin=0.2, ymax=0.5), color="#8BC34A", alpha=0) +
-  facet_grid(Outcome~Gender, switch="y", scales ="free") +
+  # geom_text(data=stars1a, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=6) +
+  # geom_rect(data=data.frame(StimuliType = "Individual", Proportion=0.1, Gender=as.factor("Male"), Outcome="Arousal"),
+  #           aes(xmin=0.8, xmax=1.2, ymin=0.35, ymax=0.7), color="#8BC34A", alpha=0, ) +
+  # geom_rect(data=data.frame(StimuliType = "Individual",Proportion=0.1, Gender=as.factor("Female"), Outcome="Arousal"),
+            # aes(xmin=0.8, xmax=1.2, ymin=0.2, ymax=0.5), color="#8BC34A", alpha=0) +
+  facet_grid(~Gender, switch="y", scales ="free") +
   scale_y_continuous(limits=c(0, 1), labels=scales::percent) +
   scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
   theme_minimal() +
@@ -1070,7 +1073,7 @@ m2 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition + (Condition | Participant) 
                       family=glmmTMB::ordbeta(),
                       control = glmmTMB::glmmTMBControl(parallel = 8))
 m3 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition  + (Condition | Participant) + (1|Stimulus),
-                      data=filter(df, ConditionBelief == "True", Feedback_NoFacesAttractive=="True"), 
+                      data=filter(df, ConditionBelief == "True", Feedback_AILessAttractive=="True"), 
                       family=glmmTMB::ordbeta(),
                       control = glmmTMB::glmmTMBControl(parallel = 8))
 m4 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition  + (Condition | Participant) + (1|Stimulus),
@@ -1078,10 +1081,10 @@ m4 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition  + (Condition | Participant)
                       family=glmmTMB::ordbeta(),
                       control = glmmTMB::glmmTMBControl(parallel = 8))
 
-stars2 <- data.frame(label=c("**", "***", "*", "*", "*"),
-                    Gender=fct_relevel(c("Male", "Male", "Male", "Female", "Female")),
-                    Type=c("All trials", "Believed trials" ,"'AI was more attractive'", "Believed trials", "'No faces were attractive'"),
-                    y=c(0.52, 0.56, 0.66, 0.47, 0.39))
+stars2 <- data.frame(label=c("**", "***", "*", "***", "*", "*"),
+                    Gender=fct_relevel(c("Male", "Male", "Male", "Female", "Male", "Male")),
+                    Type=c("All trials", "Believed trials" ,"'AI was more attractive'", "Believed trials", "'AI was less attractive'", "'AI was less attractive'"),
+                    y=c(0.52, 0.56, 0.66, 0.47, 0.39, 0.6))
 
 pred2 <- rbind(
   estimate_relation(m1) |> 
@@ -1089,12 +1092,12 @@ pred2 <- rbind(
   estimate_relation(m2) |> 
     mutate(Type = "Believed trials"),
   estimate_relation(m3) |> 
-    mutate(Type = "'No faces were attractive'"),
+    mutate(Type = "'AI was less attractive'"),
   estimate_relation(m4) |> 
     mutate(Type = "'AI was more attractive'"))
 
 p2 <- pred2 |> 
-  mutate(Type = fct_relevel(Type, "All trials", "Believed trials", "'No faces were attractive'", "'AI was more attractive'")) |> 
+  mutate(Type = fct_relevel(Type, "All trials", "Believed trials", "'AI was less attractive'", "'AI was more attractive'")) |> 
   ggplot(aes(x=Type, y=Predicted)) +
   geom_hline(yintercept=0, color="darkgrey") +
   geom_line(aes(group=Condition, color=Condition), position = position_dodge(width=0.2), alpha=0.8, linewidth=0.1) +
