--- a/study2/analysis/1_cleaning.qmd
+++ b/study2/analysis/1_cleaning.qmd
@@ -289,8 +289,12 @@ outliers$arousal <- intersect(outliers$emo_aro, outliers$emo_ent)
 
 Only `r sum(df$Gender=="Other")` participants self-reported as neither female nor male, hence they were excluded from further analysis. 
 
+Only `r sum(df$SexualOrientation == "Other")` participants self-reported as not being heterosexual, homosexual, nor bisexual, hence they were removed from further analysis. 
+
 ```{r}
 df<- filter(df, !Gender=="Other")
+df<- filter(df, !SexualOrientation=="Other")
+
 df <- filter(df, !Participant %in% outliers$arousal)
 dftask <- filter(dftask, !Participant %in% outliers$arousal)
 ```
