--- a/analysis/analysis.qmd
+++ b/analysis/analysis.qmd
@@ -50,13 +50,12 @@ results_table <- function(model, effects="fixed", filter=NULL) {
 dfsub1 <- dfsub <- read.csv("https://raw.githubusercontent.com/RealityBending/FictionEro/refs/heads/main/study1/data/data_participants.csv")
 df1 <- read.csv("https://raw.githubusercontent.com/RealityBending/FictionEro/refs/heads/main/study1/data/data.csv") |> 
   right_join(
-    select(dfsub, Participant, Sample, Language, Mobile, starts_with("Feedback_"), 
+    select(dfsub1, Participant, Sample, Language, Mobile, starts_with("Feedback_"), 
            BAIT_Visual, BAIT_Text, AI_Knowledge, SexualActivity, 
            GAAIS_Negative, GAAIS_Positive, Porn, COPS_Frequency_2,
            Screen_Size,
            -Feedback_Comments),
-    by = "Participant"
-    ) |> 
+    by = "Participant") |> 
   datawizard::rescale(select=c("Valence"), range=c(-1, 1), to=c(0, 1)) |> 
   mutate(Condition = fct_relevel(Condition, "Photograph", "AI-Generated"),
          Relevance =  fct_relevel(Relevance, "Relevant", "Irrelevant", "Non-erotic"),
@@ -247,28 +246,61 @@ diff_plot2
 
 *Note*. Models for study 1 only include the conditions which were relevant to the participants secual orientation (e.g., seeing images of men as a heterosexual woman). 
 
-### Arousal
+### Arousal 
 
 ```{r}
 arousal1 <- readRDS("models/ModelArousal_1.rds")
-results_table(arousal1)
-
-pred_a1 <- estimate_means(arousal1, by = c("Sex", "Relevance", "Condition", "ConditionBelief"), backend = "emmeans")  |>
-  as.data.frame()
-
-pred_a1|>
-  mutate(Sex = fct_relevel(Sex, "Male", "Female")) |>
-  ggplot(aes(x = Arousal, y= Proportion ))
-
+arousal2 <- readRDS("models/ModelArousal_2.rds")
 ```
 
 ```{r}
-arousal2 <- readRDS("models/ModelArousal_2.rds")
-results_table(arousal2)
 
-pred_a2 <- estimate_means(arousal2, by = c("Gender","Condition", "ConditionBelief"), backend = "emmeans") |>
-  as.data.frame()
+pred_a <- rbind(
+  modelbased::estimate_means(arousal1, by = c("Sex", "Relevance", "Condition", "ConditionBelief"), backend = "emmeans")  |>
+    filter(Relevance == "Relevant") |>
+    select(-Relevance) |>
+    rename(Gender = "Sex") |>
+    mutate(Sample = "Study 1")|>
+  as.data.frame(), 
+  modelbased::estimate_means(arousal2, by = c("Gender","Condition", "ConditionBelief"), backend = "emmeans")|>
+    mutate(Sample = "Study 2") |>
+    as.data.frame()) 
+
+pred_a |>
+  ggplot(aes(x = ConditionBelief,y = Proportion, color = Condition,linetype = Sample, group = interaction(Sample, Condition))) +
+  geom_line(size = 1) +
+  geom_point(size = 2) +
+  geom_errorbar(aes(ymin = CI_low, ymax = CI_high),width = 0.1) +
+  facet_wrap(~ Gender) +
+  scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  theme_minimal(base_size = 14) +
+  theme(
+        axis.text.y = element_text(size = 8),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
+        strip.text.x = element_text(size = 10),
+        strip.text.y = element_text(size = 10),
+        axis.text.x = element_text(face = "bold", size=9, color="black"),
+        legend.text = element_text(size = 10),
+        legend.position =  ) +
+  labs(x = "Whether the original labels were believed to be true",y = "Estimated Proportion",color = "Images presented as:",linetype = "Sample")
 ```
+
+### Enticement
+
+```{r}
+enticement1 <- readRDS("models/ModelEnticement_1.rds")
+enticement2 <- readRDS("models/ModelEnticement_2.rds")
+```
+
+
+### Valence
+
+```{r}
+valence1 <- readRDS("models/ModelValence_1.rds")
+valence2 <- readRDS("models/ModelValence_2.rds")
+```
+
 
 ## Interindividual Variability and Moderators
 
